--- a/Frontend/Dashboard/styles.css
+++ b/Frontend/Dashboard/styles.css
@@ -87,7 +87,6 @@ form.search-bar input {
 main {
 	width: 100%;
 	display: flex;
-	height: 100vh;
 }
 
 .left-nav {
@@ -142,4 +141,43 @@ main {
 
 .user-space {
 	flex: 4 0 0;
+	padding: 1rem 2rem;
+	height: 183vh;
 }
+
+.user-space-head {
+	font-family: 'Ubuntu', sans-serif;
+	font-size: 2rem;
+	font-weight: 250;
+	color: hsl(192,13%,16%);
+	border-bottom: 0.1px solid hsl(190,8%,80%);
+	padding-bottom: 0.3rem;
+}
+
+/**********CHARTS************/
+
+.graph-data {
+	display:flex;
+	flex-flow: column;
+	height: 90%;
+}
+
+.line-graph {
+	flex: 1.2 0 0;
+	position: relative;
+	padding: 2rem;
+}
+
+.pie-chart {
+	position: relative;
+	flex: 1.2 0 0;
+	display: flex;
+	flex-flow: row;
+	padding: 2rem;
+}
+
+.pie-chart div{
+	position: relative;
+	flex: 1 0 0;
+}
+
