Integrated form input with predictions

--- a/andha_predictor/dashboard/templates/dashboard/form.html
+++ b/andha_predictor/dashboard/templates/dashboard/form.html
@@ -182,6 +182,80 @@
                                 </div>
                             </div>
 
+
+                            <div class="input-element">
+                                <div class="central-input">
+                                    <div class="radio-container">
+                                        <h2 class="input-label">Your Mother's Education status ?</h2>
+                                        <ul class="radio-options-list">
+                                          <li>
+                                            <input type="radio" id="mjob-f-option" name="Medu" value="0">
+                                            <label for="Medu-f-option" class="radio-label">None</label>
+                                            <div class="check"></div>
+                                          </li>
+
+                                          <li>
+                                            <input type="radio" id="Medu-s-option" name="Medu" value="1">
+                                            <label for="Medu-s-option" class="radio-label">Primary Education</label>
+                                            <div class="check"><div class="inside"></div></div>
+                                          </li>
+
+                                          <li>
+                                            <input type="radio" id="Medu-option4" name="Medu" value="2">
+                                            <label for="Medu-option4" class="radio-label">Till 9th</label>
+                                            <div class="check"><div class="inside"></div></div>
+                                          </li>
+
+                                          <li>
+                                            <input type="radio" id="Medu-option5" name="Medu" value="3">
+                                            <label for="mjob-option5" class="radio-label">Secondary Education</label>
+                                            <div class="check"><div class="inside"></div></div>
+                                          </li>
+
+                                          <li>
+                                            <input type="radio" id="Medu-option5" name="Medu" value="4">
+                                            <label for="mjob-option5" class="radio-label">Higher Education</label>
+                                            <div class="check"><div class="inside"></div></div>
+                                          </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="input-element">
+                                <div class="central-input">
+                                    <div class="radio-container">
+                                        <h2 class="input-label">Your Father's Education status ?</h2>
+                                        <ul class="radio-options-list">
+                                          <li>
+                                            <input type="radio" id="fedu-f-option" name="Fedu" value="0">
+                                            <label for="Fedu-f-option" class="radio-label">None</label>
+                                            <div class="check"></div>
+                                          </li>
+
+                                          <li>
+                                            <input type="radio" id="Fedu-s-option" name="Fedu" value="1">
+                                            <label for="Fedu-s-option" class="radio-label">Primary Education</label>
+                                            <div class="check"><div class="inside"></div></div>
+                                          </li>
+
+                                          <li>
+                                            <input type="radio" id="Fedu-option4" name="Fedu" value="2">
+                                            <label for="Fedu-option4" class="radio-label">Till 9th</label>
+                                            <div class="check"><div class="inside"></div></div>
+                                          </li>
+
+                                          <li>
+                                            <input type="radio" id="Fedu-option5" name="Fedu" value="3">
+                                            <label for="Fedu-option5" class="radio-label">Secondary Education</label>
+                                            <div class="check"><div class="inside"></div></div>
+                                          </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+
                             <div class="input-element">
                                 <div class="central-input">
                                     <div class="radio-container">
@@ -227,25 +301,25 @@
                                         <h2 class="input-label">Reason For Selecting School ?</h2>
                                         <ul class="radio-options-list">
                                           <li>
-                                            <input type="radio" id="school-reason-f-option" name="reason" value="Close to School">
+                                            <input type="radio" id="school-reason-f-option" name="reason" value="home">
                                             <label for="school-reason-f-option" class="radio-label">Close To School</label>
                                             <div class="check"></div>
                                           </li>
 
                                           <li>
-                                            <input type="radio" id="school-reason-s-option" name="reason" value="Reputation of School">
+                                            <input type="radio" id="school-reason-s-option" name="reason" value="reputation">
                                             <label for="school-reason-s-option" class="radio-label">Reputation of School</label>
                                             <div class="check"><div class="inside"></div></div>
                                           </li>
 
                                           <li>
-                                            <input type="radio" id="school-reason-t-option" name="reason" value="Course Preference">
+                                            <input type="radio" id="school-reason-t-option" name="reason" value="course">
                                             <label for="school-reason-t-option" class="radio-label">Course Preference</label>
                                             <div class="check"><div class="inside"></div></div>
                                           </li>
 
                                           <li>
-                                            <input type="radio" id="school-reason-option4" name="reason" value="Other">
+                                            <input type="radio" id="school-reason-option4" name="reason" value="other">
                                             <label for="school-reason-option4" class="radio-label">Other</label>
                                             <div class="check"><div class="inside"></div></div>
                                           </li>
@@ -445,6 +519,28 @@
                                     </div>
                                 </div>
                             </div>
+                            
+                            <div class="input-element">
+                                <div class="central-input">
+                                    <div class="radio-container">
+                                        <h2 class="input-label">Attended Nurserry ?</h2>
+                                        <ul class="radio-options-list">
+                                          <li>
+                                            <input type="radio" id="nursery-f-option" name="nursery" value="yes">
+                                            <label for="nursery-f-option" class="radio-label">YES</label>
+                                            <div class="check"></div>
+                                          </li>
+
+                                          <li>
+                                            <input type="radio" id="nursery-s-option" name="nursery" value="no">
+                                            <label for="nursery-s-option" class="radio-label">NO</label>
+                                            <div class="check"><div class="inside"></div></div>
+                                          </li>
+
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
 
                             <div class="input-element">
                                 <div class="central-input">
@@ -492,18 +588,74 @@
 
                             <div class="input-element">
                                 <div class="central-input">
-                                    <label for="marks" class="input-label">Free time you get after school (1: Very low 5: Very-high)?</label>
+                                    <div class="radio-container">
+                                        <h2 class="input-label">Are you involved in a relationship ?</h2>
+                                        <ul class="radio-options-list">
+                                          <li>
+                                            <input type="radio" id="romantic-f-option" name="romantic" value="yes">
+                                            <label for="romantic-f-option" class="radio-label">YES</label>
+                                            <div class="check"></div>
+                                          </li>
+
+                                          <li>
+                                            <input type="radio" id="romantic-s-option" name="romantic" value="no">
+                                            <label for="romantic-s-option" class="radio-label">NO</label>
+                                            <div class="check"><div class="inside"></div></div>
+                                          </li>
+
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="input-element">
+                                <div class="central-input">
+                                    <label for="freetime" class="input-label">Free time you get after school (1: Very low 5: Very-high)?</label>
                                     <input type="number" name="freetime" max="5" min="1">
                                 </div>
                             </div>
 
                             <div class="input-element">
                                 <div class="central-input">
-                                    <label for="marks" class="input-label">How often do you go out with friends (1: Very low 5: Very-high)?</label>
-                                    <input type="number" name="goout" max="5" min="1">
+                                    <label for="Dalc" class="input-label">Work Day alcohol consumption (1: Very low 5: Very-high)?</label>
+                                    <input type="number" name="Dalc" max="5" min="1">
                                 </div>
                             </div>
 
+                            <div class="input-element">
+                                <div class="central-input">
+                                    <label for="Walc" class="input-label">Weekend alcohol consumption (1: Very low 5: Very-high)?</label>
+                                    <input type="number" name="Walc" max="5" min="1">
+                                </div>
+                            </div>
+
+                            <div class="input-element">
+                                <div class="central-input">
+                                    <label for="goout" class="input-label">How often do you go out with friends (1: Very low 5: Very-high)?</label>
+                                    <input type="number" name="goout" max="5" min="1">
+                                </div>
+                            </div>
+                            
+                            <div class="input-element">
+                                <div class="central-input">
+                                    <label for="health" class="input-label">What is your current health status (1: Very low 5: Very-high)?</label>
+                                    <input type="number" name="health" max="5" min="1">
+                                </div>
+                            </div>
+
+                            <div class="input-element">
+                                <div class="central-input">
+                                    <label for="famrel" class="input-label">How are your family realtionships (1: very-bad 5: excellent)?</label>
+                                    <input type="number" name="famrel" max="5" min="1">
+                                </div>
+                            </div>
+
+                            <div class="input-element">
+                                <div class="central-input">
+                                    <label for="absences" class="input-label">Total number of absences in school?</label>
+                                    <input type="number" name="absences" max="93" min="0">
+                                </div>
+                            </div>
 
                             <div class="input-element">
                                 <div class="central-input">
